Tampilan bagian luar

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,11 @@
 <body>
 <article class="deck">
   <!--isi disini-->
+  <section class="warna">
+    <h2>Tampilan bagian luar</h2>
+    <img src="images/mortise-front_UI.png" width="40%">
+  </section>
+
   
 </article>
 
