--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,10 @@
     <img src="images/mortise-front_UI.png" width="40%">
   </section>
 
+  <section class="warna"> <!--3-->
+    <h2>Material</h2>
+      <h3>Bagian luar</h3>
+
   
 </article>
 
