--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,10 @@
   <section class="warna"> <!--3-->
     <h2>Material</h2>
       <h3>Bagian luar</h3>
+<ul>
+          <li>Aluminium</li>
+          <li>Abs</li>
+        </ul>
 
   
 </article>
