Tampilan Bagian Dalam

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
     <h2>Tampilan bagian luar</h2>
     <img src="images/mortise-front_UI.png" width="40%">
   </section>
+ <section class="warna"> <!--2-->
+    <h2>Tampilan bagian dalam</h2>
+   </section>
 
   <section class="warna"> <!--3-->
     <h2>Material</h2>
