--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,16 @@
 	<li> kawat </li>
         </ul>
 
+        <section class="warna"> <!--4-->
+          <h3>Pembuka (Unlock)</h3>
+          <ul class="build build-items">
+              <li>Smartphone</li>
+              <li>PIN</li>
+              <li>Keycard</li>
+              <li>Keytag</li>
+              <li>Physical Key (Kunci biasa)</li>
+            </ul>
+        </section>
   
 </article>
 
