--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,14 @@
     @import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
     
     .lengkung{
-      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
       border-radius: 20px;
       border: solid #00dead 5px;
     }
     h3,h4,h5,h6{
       text-align: center;
       color: #00dead;
-      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
-      font-weight: bold;
     }
     .warna,body{
-      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
       background-color: #bdfff4;
       color: #103939;
       font-family: 'Kalam', cursive;
@@ -44,20 +40,10 @@
 <ul>
           <li>Aluminium</li>
           <li>Abs</li>
-	<li> Besi </li>
-	<li> kawat </li>
         </ul>
+<section class="warna"> <!--3-->
+    <h2>Material</h2>
 
-        <section class="warna"> <!--4-->
-          <h3>Pembuka (Unlock)</h3>
-          <ul class="build build-items">
-              <li>Smartphone</li>
-              <li>PIN</li>
-              <li>Keycard</li>
-              <li>Keytag</li>
-              <li>Physical Key (Kunci biasa)</li>
-            </ul>
-        </section>
   
 </article>
 
