--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
     <h2>Tampilan bagian luar</h2>
     <img src="images/mortise-front_UI.png" width="40%">
   </section>
+ <section class="warna"> <!--2-->
+      <h2>Ukuran</h2>
+      <h3>Bagian luar</h3>
 
   
 </article>
