--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,17 @@
     @import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
     
     .lengkung{
+      text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
       border-radius: 20px;
       border: solid #00dead 5px;
     }
     h3,h4,h5,h6{
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
       text-align: center;
       color: #00dead;
     }
     .warna,body{
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
       background-color: #bdfff4;
       color: #103939;
       font-family: 'Kalam', cursive;
