--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -7,57 +8,76 @@
   <link rel="stylesheet" type="text/css" href="build/build.css">
   <style>
     @import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
-    
-    .lengkung{
+
+    .lengkung {
       border-radius: 20px;
       border: solid #00dead 5px;
     }
-    h3,h4,h5,h6{
+
+    h3,
+    h4,
+    h5,
+    h6 {
       text-align: center;
       color: #00dead;
     }
-    .warna,body{
+
+    .warna,
+    body {
       background-color: #bdfff4;
       color: #103939;
       font-family: 'Kalam', cursive;
     }
   </style>
 </head>
+
 <body>
-<article class="deck">
-  <!--isi disini-->
-  <section class="warna">
-    <h2>Tampilan bagian luar</h2>
-    <img src="images/mortise-front_UI.png" width="40%">
-  </section>
- <section class="warna"> <!--2-->
-    <h2>Tampilan bagian dalam</h2>
-   </section>
+  <article class="deck">
+    <!--isi disini-->
+    <section class="warna">
+      <h2>Tampilan bagian luar</h2>
+      <img src="images/mortise-front_UI.png" width="40%">
+    </section>
+    <section class="warna">
+      <!--2-->
+      <h2>Tampilan bagian dalam</h2>
+    </section>
 
-  <section class="warna"> <!--3-->
-    <h2>Material</h2>
+    <section class="warna">
+      <!--3-->
+      <h2>Material</h2>
       <h3>Bagian luar</h3>
-<ul>
-          <li>Aluminium</li>
-          <li>Abs</li>
-	<li> Besi </li>
-	<li> kawat </li>
+      <ul>
+        <li>Aluminium</li>
+        <li>Abs</li>
+        <li> Besi </li>
+        <li> kawat </li>
+      </ul>
+
+      <section class="warna">
+        <!--4-->
+        <h3>Pembuka (Unlock)</h3>
+        <ul class="build build-items">
+          <li>Smartphone</li>
+          <li>PIN</li>
+          <li>Keycard</li>
+          <li>Keytag</li>
+          <li>Physical Key (Kunci biasa)</li>
         </ul>
+      </section>
 
-        <section class="warna"> <!--4-->
-          <h3>Pembuka (Unlock)</h3>
-          <ul class="build build-items">
-              <li>Smartphone</li>
-              <li>PIN</li>
-              <li>Keycard</li>
-              <li>Keytag</li>
-              <li>Physical Key (Kunci biasa)</li>
-            </ul>
-        </section>
-  
-</article>
+      <section class="warna"> <!--4-->
+        <h3>Keamanan (Security)</h3>
+        <ul class="build build-items">
+          <li>Security Lockout Mode</li>
+          <li>Decoy Pin Code</li>
+        </ul>
+      </section>
 
-<script src="build/build.js"></script>
+  </article>
+
+  <script src="build/build.js"></script>
 
 </body>
+
 </html>
