--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,13 @@
       </ul>
   </section>
 
+  <section class="warna"> <!--4-->
+    <h3>Penguncian (Lock)</h3>
+    <ul class="build build-items">
+      <li>Auto Lock</li>
+      <li>Manual Lock</li>
+    </ul>
+  </section>
   
 </article>
 
