Tampilan Bagian Dalam

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,6 @@
  <section class="warna"> <!--2-->
     <h2>Tampilan bagian dalam</h2>
    </section>
-
   <section class="warna"> <!--3-->
     <h2>Material</h2>
       <h3>Bagian luar</h3>
@@ -43,6 +42,7 @@
         </ul>
 <section class="warna"> <!--3-->
     <h2>Material</h2>
+<h3>Bagian luar</h3>
 
   
 </article>
