Memasukkan slide Logo

--- a/src/index.html
+++ b/src/index.html
@@ -26,16 +26,17 @@
 <body>
 <article class="deck">
   <!--isi disini-->
+  <section class="warna"> <!--1-->
+    <img src="images/igloohome_Logo.png" width="60%">
+  </section>
   <section class="warna">
     <h2>Tampilan bagian luar</h2>
     <img src="images/mortise-front_UI.png" width="40%">
   </section>
  <section class="warna"> <!--2-->
-<<<<<<< HEAD
       <h2>Ukuran</h2>
       <h3>Bagian luar</h3>
 
-=======
     <h2>Tampilan bagian dalam</h2>
     <h3>Bagian luar</h3>
 
@@ -49,13 +50,8 @@
         </ul>
 <section class="warna"> <!--3-->
     <h2>Material</h2>
-<<<<<<< HEAD
 <h3>Bagian luar</h3>
-=======
->>>>>>> 3f78fc2a6efaa5e3f4735bc941d67e7a2a3c7ef4
->>>>>>> 586b50b71992726365348a7fe802b005d1f88e99
 
-  
 </article>
 
 <script src="build/build.js"></script>
