Section class Pembuka (Unlock)

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -7,53 +8,73 @@
   <link rel="stylesheet" type="text/css" href="build/build.css">
   <style>
     @import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
-    
-    .lengkung{
+
+    .lengkung {
       border-radius: 20px;
       border: solid #00dead 5px;
     }
-    h3,h4,h5,h6{
+
+    h3,
+    h4,
+    h5,
+    h6 {
       text-align: center;
       color: #00dead;
     }
-    .warna,body{
+
+    .warna,
+    body {
       background-color: #bdfff4;
       color: #103939;
       font-family: 'Kalam', cursive;
     }
   </style>
 </head>
+
 <body>
-<article class="deck">
-  <!--isi disini-->
-  <section class="warna">
-    <h2>Tampilan bagian luar</h2>
-    <img src="images/mortise-front_UI.png" width="40%">
-  </section>
- <section class="warna"> <!--2-->
-<<<<<<< HEAD
-      <h2>Ukuran</h2>
+  <article class="deck">
+    <!--isi disini-->
+    <section class="warna">
+      <h2>Tampilan bagian luar</h2>
+      <img src="images/mortise-front_UI.png" width="40%">
+    </section>
+    <section class="warna">
+      <!--2-->
+      <<<<<<< HEAD <h2>Ukuran</h2>
+        <h3>Bagian luar</h3>
+
+        =======
+
+    </section>
+
+    <section class="warna">
+      <!--3-->
+      <h2>Material</h2>
       <h3>Bagian luar</h3>
+      <ul>
+        <li>Aluminium</li>
+        <li>Abs</li>
+      </ul>
+      <section class="warna">
+        <!--3-->
+        <h2>Material</h2>
+        >>>>>>> 3f78fc2a6efaa5e3f4735bc941d67e7a2a3c7ef4
+        <section class="warna">
+          <!--4-->
+          <h3>Pembuka (Unlock)</h3>
+          <ul class="build build-items">
+            <li>Smartphone</li>
+            <li>PIN</li>
+            <li>Keycard</li>
+            <li>Keytag</li>
+            <li>Physical Key (Kunci biasa)</li>
+          </ul>
+        </section>
 
-=======
-   
-   </section>
+  </article>
 
-  <section class="warna"> <!--3-->
-    <h2>Material</h2>
-      <h3>Bagian luar</h3>
-<ul>
-          <li>Aluminium</li>
-          <li>Abs</li>
-        </ul>
-<section class="warna"> <!--3-->
-    <h2>Material</h2>
->>>>>>> 3f78fc2a6efaa5e3f4735bc941d67e7a2a3c7ef4
-
-  
-</article>
-
-<script src="build/build.js"></script>
+  <script src="build/build.js"></script>
 
 </body>
+
 </html>
