Section Keamanan (Security)

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,13 @@
             <li>Physical Key (Kunci biasa)</li>
           </ul>
         </section>
+        <section class="warna"> <!--4-->
+          <h3>Keamanan (Security)</h3>
+          <ul class="build build-items">
+            <li>Security Lockout Mode</li>
+            <li>Decoy Pin Code</li>
+          </ul>
+        </section>
 
   </article>
 
