--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
       </ul>
       <section class="warna">
         <!--3-->
-        <h2>Material</h2>
+        <h2>Material</h2>   
         <section class="warna">
           <!--4-->
           <h3>Pembuka (Unlock)</h3>
@@ -76,6 +76,14 @@
           <ul class="build build-items">
             <li>Security Lockout Mode</li>
             <li>Decoy Pin Code</li>
+          </ul>
+        </section>
+          <section class="warna"> <!--5-->
+          <h3>Desain</h3>
+          <ul class="build build-items">
+            <li>Door lock shell and handle</li>
+            <li>Lock body</li>
+            <li>Circuit board</li>
           </ul>
         </section>
 
