--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,18 @@
     .lengkung{
       border-radius: 20px;
       border: solid #00dead 5px;
+      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
     }
     h3,h4,h5,h6{
       text-align: center;
       color: #00dead;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
     }
     .warna,body{
       background-color: #bdfff4;
       color: #103939;
       font-family: 'Kalam', cursive;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
     }
   </style>
 </head>
