--- a/src/index.html
+++ b/src/index.html
@@ -15,17 +15,13 @@
       box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
     }
 
-    h3,
-    h4,
-    h5,
-    h6 {
+    h3,h4,h5,h6 {
       text-align: center;
       color: #00dead;
       text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
     }
 
-    .warna,
-    body {
+    .warna,body {
       background-color: #bdfff4;
       color: #103939;
       font-family: 'Kalam', cursive;
@@ -35,31 +31,7 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-<article class="deck">
-  <!--isi disini-->
-  <section class="warna">
-    <h2>Tampilan bagian luar</h2>
-    <img src="images/mortise-front_UI.png" width="40%">
-  </section>
-<<<<<<< HEAD
 
-  <section class="warna"> <!--3-->
-    <h2>Material</h2>
-      <h3>Bagian luar</h3>
-<ul>
-          <li>Aluminium</li>
-          <li>Abs</li>
-        </ul>
-<section class="warna"> <!--3-->
-    <h2>Material</h2>
-<<<<<<< HEAD
-<h3>Bagian luar</h3>
-
-</article>
-=======
-
-=======
   <article class="deck">
     <!--isi disini-->
     <section class="warna">
@@ -68,12 +40,10 @@
     </section>
     <section class="warna">
       <!--2-->
-      <<<<<<< HEAD <h2>Ukuran</h2>
+       <h2>Ukuran</h2>
         <h3>Bagian luar</h3>
 
-        =======
->>>>>>> 89f23a81e26e90cf4c2d943a79aca95c404cd667
-
+      
     </section>
 
     <section class="warna">
@@ -87,7 +57,6 @@
       <section class="warna">
         <!--3-->
         <h2>Material</h2>
-        >>>>>>> 3f78fc2a6efaa5e3f4735bc941d67e7a2a3c7ef4
         <section class="warna">
           <!--4-->
           <h3>Pembuka (Unlock)</h3>
@@ -108,7 +77,6 @@
         </section>
 
   </article>
->>>>>>> 4ec6e6daa42e958ccc89b3131ebfdbf42fcba590
 
   <script src="build/build.js"></script>
 
