--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,9 @@
 
   <article class="deck">
     <!--isi disini-->
+    <section class="warna"> <!--1-->
+      <img src="images/igloohome_Logo.png" width="60%">
+    </section>
     <section class="warna">
       <h2>Tampilan bagian luar</h2>
       <img src="images/mortise-front_UI.png" width="40%">
