Penambahan bagian dalam di section 3

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,12 @@
         <li>Aluminium</li>
         <li>Abs</li>
       </ul>
+      <h3>Bagian dalam</h3>
+        <ul>
+          <li>Aluminium</li>
+          <li>Abs</li>
+          <li>Zinc</li>
+        </ul>
       <section class="warna">
         <!--3-->
         <h2>Material</h2>   
