--- a/src/index.html
+++ b/src/index.html
@@ -83,15 +83,13 @@
             <li>Security Lockout Mode</li>
             <li>Decoy Pin Code</li>
           </ul>
-        </section>
-          <section class="warna"> <!--5-->
-          <h3>Desain</h3>
-          <ul class="build build-items">
-            <li>Door lock shell and handle</li>
-            <li>Lock body</li>
-            <li>Circuit board</li>
-          </ul>
-        </section>
+        <section class="warna"> <!--5-->
+            <h3>Bencana (Emergency)</h3>
+            <ul class="build build-items">
+              <li>Fire Alarm</li>
+              <li>Anti-Panic Exit System</li>
+            </ul>
+          </section>
 
   </article>
 
