format dokumen pada file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,17 @@
       box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
     }
 
-    h3,h4,h5,h6 {
+    h3,
+    h4,
+    h5,
+    h6 {
       text-align: center;
       color: #00dead;
       text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
     }
 
-    .warna,body {
+    .warna,
+    body {
       background-color: #bdfff4;
       color: #103939;
       font-family: 'Kalam', cursive;
@@ -34,7 +38,8 @@
 
   <article class="deck">
     <!--isi disini-->
-    <section class="warna"> <!--1-->
+    <section class="warna">
+      <!--1-->
       <img src="images/igloohome_Logo.png" width="60%">
     </section>
     <section class="warna">
@@ -43,10 +48,10 @@
     </section>
     <section class="warna">
       <!--2-->
-       <h2>Ukuran</h2>
-        <h3>Bagian luar</h3>
+      <h2>Ukuran</h2>
+      <h3>Bagian luar</h3>
 
-      
+
     </section>
 
     <section class="warna">
@@ -58,14 +63,14 @@
         <li>Abs</li>
       </ul>
       <h3>Bagian dalam</h3>
-        <ul>
-          <li>Aluminium</li>
-          <li>Abs</li>
-          <li>Zinc</li>
-        </ul>
+      <ul>
+        <li>Aluminium</li>
+        <li>Abs</li>
+        <li>Zinc</li>
+      </ul>
       <section class="warna">
         <!--3-->
-        <h2>Material</h2>   
+        <h2>Material</h2>
         <section class="warna">
           <!--4-->
           <h3>Pembuka (Unlock)</h3>
@@ -77,13 +82,15 @@
             <li>Physical Key (Kunci biasa)</li>
           </ul>
         </section>
-        <section class="warna"> <!--4-->
+        <section class="warna">
+          <!--4-->
           <h3>Keamanan (Security)</h3>
           <ul class="build build-items">
             <li>Security Lockout Mode</li>
             <li>Decoy Pin Code</li>
           </ul>
-        <section class="warna"> <!--5-->
+          <section class="warna">
+            <!--5-->
             <h3>Bencana (Emergency)</h3>
             <ul class="build build-items">
               <li>Fire Alarm</li>
