--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,12 @@
             <li>Decoy Pin Code</li>
           </ul>
           <section class="warna">
+
+            <section class="warna">
+              <!--4-->
+
+            </section>
+
             <!--5-->
             <h3>Bencana (Emergency)</h3>
             <ul class="build build-items">
