Penambahan tutup section di section 3

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
         <li>Aluminium</li>
         <li>Abs</li>
       </ul>
+    </section>
       <section class="warna">
         <!--3-->
         <h2>Material</h2>
