Penambahan h3 bagian dalam di section 3

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
         <li>Aluminium</li>
         <li>Abs</li>
       </ul>
+      <h3>Bagian dalam</h3>
     </section>
       <section class="warna">
         <!--3-->
