--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       </ul>
       <h3>Bagian dalam</h3>
       <ul>
-        
+        <li>Aluminium</li>
       </ul>
     </section>
       <section class="warna">
