Penambahan abs di bagian dalam section 3

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
       <h3>Bagian dalam</h3>
       <ul>
         <li>Aluminium</li>
+        <li>Abs</li>
       </ul>
     </section>
       <section class="warna">
