Penambahan zinc di bagian dalam section 3

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,7 @@
       <ul>
         <li>Aluminium</li>
         <li>Abs</li>
+        <li>Zinc</li>
       </ul>
     </section>
       <section class="warna">
