--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
       <section class="warna">
         <!--3-->
         <h2>Material</h2>
-        >>>>>>> 3f78fc2a6efaa5e3f4735bc941d67e7a2a3c7ef4
+        <h3>Bagian luar</h3>
         <section class="warna">
           <!--4-->
           <h3>Pembuka (Unlock)</h3>
