Penambahan material luar Part 2 di section 3

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,8 @@
         <h2>Material</h2>
         <h3>Bagian luar</h3>
         <ul>
-          
+          <li>Aluminium</li>
+          <li>Abs</li>
         </ul>
         <section class="warna">
           <!--4-->
