--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,13 @@
             <li>Decoy Pin Code</li>
           </ul>
         </section>
+        <section class="warna"> <!--5-->
+          <h3>Bencana (Emergency)</h3>
+          <ul class="build build-items">
+            <li>Fire Alarm</li>
+            <li>Anti-Panic Exit System</li>
+          </ul>
+        </section>
 
   </article>
 
