--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,10 @@
     <h2>Tampilan bagian dalam</h2>
     <img src="images/mortise-back_UI.png" width="40%">
   </section>
+  <section class="warna"> <!--2-->
+      <h2>Ukuran</h2>
+      <h3>Bagian luar</h3>
+ </section>
 
     <section class="warna">
       <!--3-->
