--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
 
     .lengkung {
       border-radius: 20px;
-      border: solid #00dead 5px;
+      border: outset #bdfff1 5px;
+      box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
     }
 
     h3,
@@ -20,10 +21,12 @@
     h6 {
       text-align: center;
       color: #00dead;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
     }
 
     .warna,
     body {
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
       background-color: #bdfff4;
       color: #103939;
       font-family: 'Kalam', cursive;
