pengubahan warna background file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,10 @@
     }
 
     .warna,
-    body {
+    .deck {
+      background-image: linear-gradient(#fff,#cae8e1,#bdfff4);
       text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
-      background-color: #bdfff4;
+      /* background-color: #bdfff4; */
       color: #103939;
       font-family: 'Kalam', cursive;
     }
