penambahan isi html di index.html

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,11 @@
       <img src="images/mortise-front_UI.png" width="40%">
     </section>
     
+    <section class="warna"> <!--1-->
+      <h1>Smart Mortise Lock</h1>
+      <h3>Powered by </h3>
+    </section>
+
     <section class="warna"> <!--2-->
       <h2>Tampilan bagian dalam</h2>
       <img src="images/mortise-back_UI.png" width="40%">
