--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,9 @@
         <li>Decoy Pin Code</li>
       </ul>
     </section>
+
+    <section></section>
+
     <section class="warna"> <!--5-->
       <h3>Bencana (Emergency)</h3>
       <ul class="build build-items">
