--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,9 @@
       </ul>
     </section>
 
-    <section></section>
+    <section>
+      <header></header>
+    </section>
 
     <section class="warna"> <!--5-->
       <h3>Bencana (Emergency)</h3>
