nama fitur penguncian

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
     </section>
 
     <section>
-      <header></header>
+      <header>Penguncian (Lock)</header>
     </section>
 
     <section class="warna"> <!--5-->
