menambah slide logo

--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,8 @@
 <body>
   <article class="deck">
     <!--isi disini-->
-    <section class="warna">
-      <h2>Tampilan bagian luar</h2>
-      <img src="images/mortise-front_UI.png" width="40%">
+    <section class="warna"> <!--1-->
+      <img src="images/igloohome_Logo.png" width="60%">
     </section>
     
     <section class="warna"> <!--1-->
@@ -50,6 +49,11 @@
       <li>161111841</li>
     </section>
 
+    <section class="warna">
+      <h2>Tampilan bagian luar</h2>
+      <img src="images/mortise-front_UI.png" width="40%">
+    </section>
+    
     <section class="warna"> <!--2-->
       <h2>Tampilan bagian dalam</h2>
       <img src="images/mortise-back_UI.png" width="40%">
