Menambahkan nim pada slide ke-2

--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,13 @@
     <section class="warna"> <!--1-->
       <h1>Smart Mortise Lock</h1>
       <h3>Powered by </h3>
-      <li>161111612</li>
-      <li>161111841</li>
-      <li>161110901</li>
-      <li>161112049</li>
-      <li>161111124</li>
+      <ul class="build build-items">
+        <li>161111612</li>
+        <li>161111841</li>
+        <li>161110901</li>
+        <li>161112049</li>
+        <li>161111124</li>
+      </ul>
     </section>
 
     <section class="warna">
