penambahan class warna

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="warna"> <!--4-->
       <header>Penguncian (Lock)</header>
     </section>
 
