penmbahan list Auto Lock

--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,9 @@
 
     <section class="warna"> <!--4-->
       <header>Penguncian (Lock)</header>
+      <ul class="build build-items">
+          <li>Auto Lock</li>
+      </ul>
     </section>
 
     <section class="warna"> <!--5-->
