Penambahan list di bagian kedua

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,11 @@
     <section class="warna"> <!--2-->
       <h2>Ukuran</h2>
       <h3>Bagian luar</h3>
+    <ul>
+        <li>Tinggi&nbsp;&nbsp;=&nbsp;30,3&nbsp;cm</li>
+        <li>lebar&nbsp;&nbsp;&nbsp;=&nbsp;&nbsp;&nbsp;&nbsp;8&nbsp;cm</li>
+        <li>Tebal&nbsp;&nbsp;=&nbsp;&nbsp;1,78&nbsp;cm</li>
+      </ul>
     </section>
 
     <section class="warna">
