Penambahan section 3 yang baru

--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,10 @@
         <li>Zinc</li>
       </ul>
     </section>
+
+    <section class="warna"> <!--3-->
+      
+    </section>
       
     <section class="warna">
       <!--4-->
