Penambahan h1 fitur di section 3

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
     </section>
 
     <section class="warna"> <!--3-->
-      
+      <h1>Fitur</h1>
     </section>
       
     <section class="warna">
