Penambahan h3 di section 3

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
 
     <section class="warna"> <!--3-->
       <h1>Fitur</h1>
+      <h3>Terbagi atas :</h3>
     </section>
       
     <section class="warna">
