Penambahan ul di section 3 bagian fitur

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,9 @@
     <section class="warna"> <!--3-->
       <h1>Fitur</h1>
       <h3>Terbagi atas :</h3>
+      <ul class="build build-items">
+        
+      </ul>
     </section>
       
     <section class="warna">
