--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,7 @@
       <h3>Terbagi atas :</h3>
       <ul class="build build-items">
         <li>Pembuka (Unlock)</li>
+        <li>Keamanan (Security)</li>
       </ul>
     </section>
       
