Penambahan list di ul pada section 3

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,7 @@
       <ul class="build build-items">
         <li>Pembuka (Unlock)</li>
         <li>Keamanan (Security)</li>
+        <li>Penguncian (Lock)</li>
       </ul>
     </section>
       
