--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
       <h1>Smart Mortise Lock</h1>
       <h3>Powered by </h3>
       <ul class="build build-items">
-        <li>161111612</li>
+        <li>161111612 Fadil Muhammad Arsyah</li>
         <li>161111841</li>
         <li>161110901</li>
         <li>161112049</li>
