menambahkan nama pada slide ke 2

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
       <h3>Powered by </h3>
       <ul class="build build-items">
         <li>161111612 Fadil Muhammad Arsyah</li>
-        <li>161111841</li>
+        <li>161111841 Ginta Artina Ginting</li>
         <li>161110901</li>
         <li>161112049</li>
         <li>161111124</li>
