menambahkan nama pada slide ke 2

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
       <ul class="build build-items">
         <li>161111612 Fadil Muhammad Arsyah</li>
         <li>161111841 Ginta Artina Ginting</li>
-        <li>161110901</li>
+        <li>161110901 Iqbal Gunawan</li>
         <li>161112049</li>
         <li>161111124</li>
       </ul>
