--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         <li>161111612 Fadil Muhammad Arsyah</li>
         <li>161111841 Ginta Artina Ginting</li>
         <li>161110901 Iqbal Gunawan</li>
-        <li>161112049</li>
+        <li>161112049 Noviyanti Simamora</li>
         <li>161111124</li>
       </ul>
     </section>
