--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         <li>161111841 Ginta Artina Ginting</li>
         <li>161110901 Iqbal Gunawan</li>
         <li>161112049 Noviyanti Simamora</li>
-        <li>161111124</li>
+        <li>161111124 Steven Claode A T</li>
       </ul>
     </section>
 
