--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,7 @@
         <li>lebar&nbsp;&nbsp;&nbsp;=&nbsp;&nbsp;&nbsp;&nbsp;8&nbsp;cm</li>
         <li>Tebal&nbsp;&nbsp;=&nbsp;&nbsp;1,78&nbsp;cm</li>
       </ul>
+	   <h3>Bagian dalam</h3>
     </section>
 
     <section class="warna">
