--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,9 @@
         <li>Tebal&nbsp;&nbsp;=&nbsp;&nbsp;1,78&nbsp;cm</li>
       </ul>
 	   <h3>Bagian dalam</h3>
+	   <ul>
+        <li>Tinggi&nbsp;&nbsp;=&nbsp;30,2&nbsp;cm</li>
+      </ul>
     </section>
 
     <section class="warna">
