--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,10 @@
       <section class="warna"> <!--5-->
     <iframe width="640" height="360" src="https://www.youtube.com/embed/cpGfbDJehAI?rel=0&amp;showinfo=0&amp;controls=0&amp;" frameborder="0" allowfullscreen data-volume="0" class="lengkung"></iframe>
   </section>
-
+  
+  <section class="warna"> <!--5-->
+    <h2>Terima Kasih</h2>
+  </section>
   </article>
 
   <script src="build/build.js"></script>
