--- a/src/index.html
+++ b/src/index.html
@@ -143,6 +143,7 @@
   
   <section class="warna"> <!--5-->
     <h2>Terima Kasih</h2>
+    <h4 style="font-weight: lighter;color: #103939"> sekian dari kelompok kami,<br> selamat pagi </h4>
   </section>
   </article>
 
