mengubah file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -118,17 +118,25 @@
       <img src="images/mortise-back_UI.png" width="40%">
     </section>
     <section class="warna"> <!--2-->
-      <h2>Ukuran</h2>
-      <h3>Bagian luar</h3>
-    <ul>
-        <li>Tinggi&nbsp;&nbsp;=&nbsp;30,3&nbsp;cm</li>
-        <li>lebar&nbsp;&nbsp;&nbsp;=&nbsp;&nbsp;&nbsp;&nbsp;8&nbsp;cm</li>
-        <li>Tebal&nbsp;&nbsp;=&nbsp;&nbsp;1,78&nbsp;cm</li>
-      </ul>
-	   <h3>Bagian dalam</h3>
-	   <ul>
-        <li>Tinggi&nbsp;&nbsp;=&nbsp;30,2&nbsp;cm</li>
-      </ul>
+      <h2>Tampilan bagian luar</h2>
+      <div class="row">
+        <div class="col">
+          <img src="images/mortise-front_UI.png" width="80%">
+        </div>
+        <div class="col">
+          <h3>Ukuran</h3>
+          <ul class="build build-items">
+            <li>Tinggi&nbsp;&nbsp;&nbsp;=&nbsp;&nbsp;30,3&nbsp;cm</li>
+            <li>Lebar&nbsp;&nbsp;&nbsp;&nbsp;=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8&nbsp;cm</li>
+            <li>Tebal&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;=&nbsp;&nbsp;1,78&nbsp;cm</li>
+          </ul>
+          <h3>Material</h3>
+          <ul class="build build-items">
+            <li>Aluminium</li>
+            <li>Abs</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <section class="warna">
