--- a/src/index.html
+++ b/src/index.html
@@ -108,15 +108,6 @@
       </ul>
     </section>
 
-    <section class="warna">
-      <h2>Tampilan bagian luar</h2>
-      <img src="images/mortise-front_UI.png" width="40%">
-    </section>
-    
-    <section class="warna"> <!--2-->
-      <h2>Tampilan bagian dalam</h2>
-      <img src="images/mortise-back_UI.png" width="40%">
-    </section>
     <section class="warna"> <!--2-->
       <h2>Tampilan bagian luar</h2>
       <div class="row">
@@ -141,18 +132,24 @@
 
     <section class="warna">
       <!--3-->
-      <h2>Material</h2>
-      <h3>Bagian luar</h3>
-      <ul>
-        <li>Aluminium</li>
-        <li>Abs</li>
-      </ul>
-      <h3>Bagian dalam</h3>
-      <ul>
-        <li>Aluminium</li>
-        <li>Abs</li>
-        <li>Zinc</li>
-      </ul>
+      <h2>Tampilan bagian dalam</h2><div class="row">
+        <div class="col">
+          <img src="images/mortise-back_UI.png" width="80%">
+        </div>
+        <div class="col">
+          <h3>Ukuran</h3>
+          <ul class="build build-items">
+            <li>Tinggi&nbsp;&nbsp;&nbsp;=&nbsp;&nbsp;30,2&nbsp;cm</li>
+            <li>Lebar&nbsp;&nbsp;&nbsp;&nbsp;=&nbsp;&nbsp;&nbsp;&nbsp;7,9&nbsp;cm</li>
+            <li>Tebal&nbsp;&nbsp;&nbsp;&nbsp;=&nbsp;&nbsp;&nbsp;&nbsp;2,6&nbsp;cm</li>
+          </ul>
+          <h3>Material</h3>
+          <ul class="build build-items">
+            <li>Aluminium</li>
+            <li>Abs</li>
+            <li>Zinc</li>
+          </ul>
+        </div>
     </section>
 
     <section class="warna"> <!--3-->
@@ -186,7 +183,7 @@
     </section>
 
     <section class="warna"> <!--4-->
-      <header>Penguncian (Lock)</header>
+      <h3>Pembuka (Unlock)</h3>
       <ul class="build build-items">
           <li>Auto Lock</li>
       </ul>
@@ -199,9 +196,10 @@
         <li>Anti-Panic Exit System</li>
       </ul>
     </section>
-      <section class="warna"> <!--5-->
-    <iframe width="640" height="360" src="https://www.youtube.com/embed/cpGfbDJehAI?rel=0&amp;showinfo=0&amp;controls=0&amp;" frameborder="0" allowfullscreen data-volume="0" class="lengkung"></iframe>
-  </section>
+    
+    <section class="warna"> <!--5-->
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/cpGfbDJehAI?rel=0&amp;showinfo=0&amp;controls=0&amp;" frameborder="0" allowfullscreen data-volume="0" class="lengkung"></iframe>
+    </section>
   
   <section class="warna"> <!--5-->
     <h2>Terima Kasih</h2>
