list otomatis lock

--- a/src/index.html
+++ b/src/index.html
@@ -186,6 +186,7 @@
       <h3>Pembuka (Unlock)</h3>
       <ul class="build build-items">
           <li>Auto Lock</li>
+          <li>Otomatis Lock</li>
       </ul>
     </section>
 
