edit file index

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <style>
-    @import url('https://fonts.googleapis.com/css?family=Comfortaa|Merienda|Kalam|Crete+Round|Handlee|Philosopher&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=Cuprum|Josefin+Sans|Poppins|Arima+Madurai|Comfortaa|Merienda|Kalam|Crete+Round|Handlee|Philosopher&display=swap');
 
     .lengkung {
       border-radius: 20px;
@@ -66,12 +66,16 @@
       line-height: 1.5em;
       letter-spacing: 5px;
       /* background-color: #bdfff4; */
-      font-family: 'Comfortaa', cursive;
+      /* font-family: 'Cuprum', sans-serif; */
+      /* font-family: 'Josefin Sans', sans-serif; */
+      /* font-family: 'Poppins'; */
+      /* font-family: 'Arima Madurai', cursive; */
+      /* font-family: 'Comfortaa', cursive; */
       /* font-family: 'Merienda', cursive; */
       /* font-family: 'Philosopher', sans-serif; */
       /* font-family: 'Crete Round', serif; */
       /* font-family: 'Handlee', cursive; */
-      /* font-family: 'Kalam', cursive; */
+      font-family: 'Kalam', cursive;
     }
 
     ul {
