--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
     </section>
 
     <section class="warna"> <!--4-->
-      <h3>Pembuka (Unlock)</h3>
+      <h3>Penguncian (Lock)</h3>
       <ul class="build build-items">
           <li>Auto Lock</li>
           <li>Manual Lock</li>
