edit file index

--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,11 @@
       </ul>
     </section>
 
+    <section > <!--1-->
+      <h2>Permasalahan :</h2>
+      <img src="images/door lock.jpg" width="60%" class="lengkung">
+    </section>
+    
     <section class="warna"> <!--2-->
       <h2>Tampilan bagian luar</h2>
       <div class="row">
