Penghapusan class warna di section 2

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
       <img src="images/door lock.jpg" width="60%" class="lengkung">
     </section>
     
-    <section class="warna"> <!--2-->
+    <section > <!--2-->
       <h2>Tampilan bagian luar</h2>
       <div class="row">
         <div class="col">
