edit file index

--- a/src/index.html
+++ b/src/index.html
@@ -215,6 +215,16 @@
     <h2>Terima Kasih</h2>
     <h4 style="font-weight: lighter;color: #103939"> sekian dari kelompok kami,<br> selamat pagi </h4>
   </section>
+
+  <section class="warna"> <!--5-->
+    <h2>Harga</h2>
+    <ul class="build build-items">
+      <li><h1 style="color: purple; text-decoration:line-through;"> Rp 5.600.650,00</h1></li>
+  </section>
+
+  <section>
+    <h1 style="color: mediumvioletred;text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);">Rp 5.040.585,00</h1>
+  </section>
   </article>
 
   <script src="build/build.js"></script>
