Penghapusan warna di section 3

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
         </div>
     </section>
 
-    <section class="warna"> <!--3-->
+    <section> <!--3-->
       <h1>Fitur</h1>
       <h3>Terbagi atas :</h3>
       <ul class="build build-items">
