--- a/src/index.html
+++ b/src/index.html
@@ -97,11 +97,10 @@
   <article class="deck">
     <!--isi disini-->
     <section class="warna"> <!--1-->
-      <img src="images/igloohome_Logo.png" width="60%">
+      <h1>Smart Mortise Lock</h1>
     </section>
     
     <section class="warna"> <!--1-->
-      <h1>Smart Mortise Lock</h1>
       <h3>Powered by </h3>
       <ul class="build build-items">
         <li>161111612 Fadil Muhammad Arsyah</li>
@@ -110,6 +109,10 @@
         <li>161112049 Noviyanti Simamora</li>
         <li>161111124 Steven Claode A T</li>
       </ul>
+    </section>
+
+    <section class="warna"> <!--1-->
+      <img src="images/igloohome_Logo.png" width="70%">
     </section>
 
     <section > <!--1-->
