mengedit data pada index

--- a/src/index.html
+++ b/src/index.html
@@ -177,15 +177,23 @@
       
     <section class="warna">
       <!--4-->
-      <h3>Pembuka (Unlock)</h3>
-      <ul class="build build-items">
-        <li>Smartphone</li>
-        <li>PIN</li>
-        <li>Keycard</li>
-        <li>Keytag</li>
-        <li>Physical Key (Kunci biasa)</li>
-      </ul>
+      <div class="row">
+        <div class="col">
+          <img src="images/mortise-front-angled.png" width="80%">
+        </div>
+        <div class="col">
+          <h3>Pembuka (Unlock)</h3>
+          <ul class="build build-items">
+            <li>Smartphone</li>
+            <li>PIN</li>
+            <li>Keycard</li>
+            <li>Keytag</li>
+            <li>Physical Key (Kunci biasa)</li>
+          </ul>
+        </div>
+      </div>
     </section>
+
     <section class="warna"> <!--4-->
       <h3>Keamanan (Security)</h3>
       <ul class="build build-items">
@@ -222,11 +230,11 @@
   <section class="warna"> <!--5-->
     <h2>Harga</h2>
     <ul class="build build-items">
-      <li><h1 style="color: purple; text-decoration:line-through;"> Rp 5.600.650,00</h1></li>
+      <li><h1 style="font-size: 3em; color: purple; text-decoration:line-through;"> Rp 5.600.650,00</h1></li>
   </section>
 
   <section>
-    <h1 style="color: mediumvioletred;text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);">Rp 5.040.585,00</h1>
+    <h1 style="font-size: 4em; color: mediumvioletred;text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);">Rp 5.040.585,00</h1>
   </section>
   </article>
 
